syntax = 'proto3';

package bsdsensors;

import 'nuvoton_fan_control.proto';

message GenericFanControlMethod {
    double percent = 1;
}

message FanControlMethodProto {
    string name = 1;
    oneof method {
        GenericFanControlMethod generic_method = 2;
        nuvoton.FanControlMethod nuvoton_method = 3;
    }
}

message FanControlProto {
    optional string current_method = 1;
    optional double current_percent = 2;
    repeated FanControlMethodProto methods = 3;

    optional string temp_source = 4;
    optional double temp_value = 5;
}

message SetMethodRequest {
    string method = 1;
}

message SetTempSourceRequest {
    string source = 1;
}

message FanControlRequest {
    string name = 1;
    oneof request {
        SetMethodRequest set_method = 2;
        SetTempSourceRequest set_temp_source = 3;

        nuvoton.FanControlRequest nuvoton = 100;
    }
}
