syntax = 'proto3';

package bsdsensors;

message FanSpeed {
    string name = 1;
    // Fan speed in RPM.
    double value = 2;
}
