syntax = 'proto3';

package bsdsensors;

message VoltageProto {
    string name = 1;
    // Voltage value in Volts.
    double value = 2;
}
